# chamchi_GCS

./: CMakeLists.txt  README.md  chamchi_GCS_setup.iss
.cursor/rules/: github-update-workflow.mdc
.github/workflows/: android-linux-qt6.6.3.yml  android-macos.yml  android-windows.yml  docs_deploy.yml  ios.yml  macos.yml
custom/: CMakeLists.txt  custom.qrc  custom_messages.xml
custom-messages/: BUILD_INSTRUCTIONS.md  CMakeListsIntegration.txt  CustomMessageHandler.cc  CustomMessageHandler.h  FINAL_INTEGRATION_SUMMARY.md  INTEGRATION_COMPLETE.md  QGC_WORK_PLAN.md  QUICKSTART.md  README.md  SEND_MESSAGE_COMPLETE.md  VehicleIntegrationExample.cc  VehicleIntegrationExample.h  custom_messages.xml
custom/cmake/: CustomOverrides.cmake
custom/src/: CustomEmptyWindow.qml  CustomMessageHandler.h  CustomPlugin.cc  FlyView.qml  FlyViewCustomLayer.qml  FlyViewToolBar.qml  FlyViewWidgetLayer.qml  MainWindow.qml  VehicleSummary.qml
deploy/windows/: QGroundControl.rc
libs/mavlink/include/mavlink/v2.0/custom_messages/: custom_messages.h  mavlink.h  mavlink_msg_auto_aim.h  testsuite.h  version.h  (+3 more)
src/: CMakeLists.txt  main.cc
src/FlightDisplay/: CMakeLists.txt  CustomEmptyWindow.qml  FlyView.qml  FlyViewAdditionalActionsList.qml  FlyViewCustomLayer.qml  FlyViewMap.qml
src/GPS/: GPSProvider.cc
src/MAVLink/: CMakeLists.txt
src/QmlControls/: QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/Settings/: FlyView.SettingsGroup.json
src/UI/AppSettings/: CMakeLists.txt  SettingsPagesModel.qml  WebGUISettings.qml
src/Vehicle/: CMakeLists.txt  Vehicle.cc  Vehicle.h
